# zlw666.com

./: Cargo.toml  DIESEL.md  README.md  SEO学习记录.md  env  gptdb.no.data.sql  new.sql  nginx.conf  nginx转发配制.md  run.sh  zlw666.com.sql
ChatGPT/Coze/: 新建模型.txt
migrations/2024-04-02-021122_portal/: down.sql  up.sql
migrations/2024-04-12-090949_coze/: down.sql  up.sql
migrations/2024-06-05-075737_dede_cms/: down.sql  up.sql
migrations/2024-06-05-082847_QA/: down.sql  up.sql
src/: common.rs  constants.rs  db.rs  filters.rs  http.rs  main.rs  pager.rs  parse.rs  reptile.rs  schema.rs  template.rs
src/handlers/: coze_handler.rs  demo_handler.rs  home_handler.rs  kimi_handler.rs  mod.rs  questions_handler.rs  reptile_handler.rs  sue_handler.rs
src/json_value/: coze_response_json.rs  kimi_response_json.rs  mod.rs
src/models/: coze_batch_batchtitle_m.rs  mod.rs  portal_post_model.rs  qa_answers_m.rs  qa_questions_m.rs
src/routes/: coze_route.rs  demo_route.rs  home_route.rs  kimi_route.rs  mod.rs  questions_r.rs  reptile_route.rs  sue_route.rs
src/views/: demo_repeat.html  frame_base.html  index.html
src/views/lawfirm/: index.html
src/views/lawyer/: index.html
src/views/questions/: detail.html  list.html
src/views/reptile/: 66law.cn.html  lvlin_baidu.html  new.html
src/views/sue/: djdogsfy.html
static/law/: index.html  lawtrim.html  lawyer.html
static/law/assets/css/: animate.min.css  bootstrap.min.css  fontawesome-all.min.css  slicknav.css  style.css
static/law/assets/js/: main.js
tls/: cert.pem  key.rsa
落地文章/: 一到十级伤残.md
